k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webooktrial-mysql
spec:
  selector:
    app: webooktrial-mysql
  ports:
    - protocol: TCP
      #      你访问的端口
      port: 11309
      targetPort: 3306
      nodePort: 30002
  type: NodePort
