k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webooktrial-redis
spec:
  selector:
    app: webooktrial-redis
  ports:
    - protocol: TCP
      port: 11479
      #      Redis 默认端口
      targetPort: 6379
      nodePort: 30003
  type: NodePort
